[gd_scene load_steps=4 format=3 uid="uid://eoe6rexn06fv"]

[ext_resource type="Script" uid="uid://cb6avdfqm1j3y" path="res://lib/agent/agent.gd" id="1_otbm1"]
[ext_resource type="PackedScene" uid="uid://b0vqktx3q2d2r" path="res://lib/ui/node_spatial/node_spatial.tscn" id="3_81wq3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_odf55"]
radius = 0.125
height = 0.5

[node name="Agent" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 2
floor_constant_speed = true
script = ExtResource("1_otbm1")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_odf55")

[node name="NavAgent" type="NavigationAgent3D" parent="."]
navigation_layers = 3
debug_enabled = true
debug_path_custom_color = Color(1, 1, 0, 1)

[node name="NavTarget" type="Marker3D" parent="."]
top_level = true

[node name="NodeSpatial" parent="." instance=ExtResource("3_81wq3")]
text = "Anguished Claw"
bar_active = true

[node name="YCast" type="RayCast3D" parent="."]
exclude_parent = false

[node name="AnimTarget" type="Marker3D" parent="."]
